fixing admin instances header misalignment

--- a/src/ui/app/admin/ek-admin-charts/ek-admin-charts.less
+++ b/src/ui/app/admin/ek-admin-charts/ek-admin-charts.less
@@ -20,6 +20,13 @@
             width: 1px;
             margin: 0 15px;
         }
+        
+        .md-button {
+            height: 30px;
+            min-height: 0;
+            line-height: 30px;
+            margin: 0;
+        }
     }
 
     &__body {
